--- a/app/src/main/res/layout/activity_send_otp.xml
+++ b/app/src/main/res/layout/activity_send_otp.xml
@@ -18,13 +18,12 @@
             android:layout_height="130dp"
             android:layout_marginTop="80dp"
             android:contentDescription="OTP Verification"
-            android:src="@color/white"/>
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="OTP Verification"
-            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -36,7 +35,6 @@
             android:layout_marginEnd="50dp"
             android:gravity="center"
             android:text="We will send a one time verification"
-            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <TextView
@@ -47,7 +45,6 @@
             android:layout_marginEnd="30dp"
             android:gravity="center"
             android:text="Enter your mobile number"
-            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <LinearLayout
@@ -63,7 +60,6 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:text="+254-"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -76,7 +72,6 @@
                 android:imeOptions="actionDone"
                 android:importantForAutofill="no"
                 android:inputType="number"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -86,8 +81,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="70dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="70dp"
-            android:background="@color/black" />
+            android:layout_marginEnd="70dp" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -99,8 +93,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="30dp"
                 android:text="Get OTP"
-                android:textColor="@color/white"
-                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <ProgressBar
