--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -16,17 +16,14 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_marginTop="80dp"
-            android:contentDescription="OTP Verification"
-            android:src="@color/white"/>
+            android:contentDescription="OTP Verification" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="OTP Verification"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textAppearance="?attr/textAppearanceHeadline4"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -36,7 +33,6 @@
             android:layout_marginEnd="50dp"
             android:gravity="center"
             android:text="Enter verification code"
-            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <TextView
@@ -47,7 +43,6 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="50dp"
             android:gravity="center"
-            android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"/>
 
@@ -67,7 +62,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor" />
@@ -82,7 +76,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor"
@@ -98,7 +91,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor"
@@ -114,7 +106,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor"
@@ -130,7 +121,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor"
@@ -146,7 +136,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="LabelFor"
@@ -164,7 +153,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Did not receive OTP verification?"
-                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <TextView
@@ -173,7 +161,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="Resend_otp"
-                android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="8dp" />
@@ -188,7 +175,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="30dp"
                 android:text="@string/verify"
-                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
