--- a/app/src/main/res/values/shape.xml
+++ b/app/src/main/res/values/shape.xml
@@ -58,5 +58,11 @@
         <item name="cornerSize">0dp</item>
         <item name="cornerSizeTopLeft">50%</item>
     </style>
+    <style name="ShapeAppearanceOverlay.MyTheme.RoundComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+
+        <item name="cornerSizeBottomLeft">32dp</item>
+        <item name="cornerFamily">rounded</item>
+
+    </style>
 
 </resources>
