change map service provider from google to mapbox, consume the route optimization api

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/reply_blue_700"
-    tools:context=".OnboardingActivity">
+    tools:context=".ui.main.OnboardingActivity">
 
     <androidx.viewpager2.widget.ViewPager2
 
