--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OnboardingFragment">
+    tools:context=".ui.main.OnboardingFragment">
 
     <ImageView
         android:id="@+id/onboarding_image"
@@ -19,12 +19,13 @@
 
     <TextView
         android:id="@+id/onboarding_heading"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
         android:gravity="center"
 
+        android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onboarding_image">
@@ -33,11 +34,12 @@
 
     <TextView
         android:id="@+id/onboarding_body"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
 
+        android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceBody1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onboarding_heading" />
