--- a/app/src/main/res/layout/fragment_job_information.xml
+++ b/app/src/main/res/layout/fragment_job_information.xml
@@ -10,7 +10,10 @@
         android:id="@+id/quantity_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="150dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -22,21 +25,48 @@
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/pickup_location_layout"
+        android:id="@+id/location_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/quantity_layout">
 
+
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/pickup_location_input"
+            android:id="@+id/location_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/pickup_location"
-            android:inputType="text" />
+            android:layout_marginTop="8dp"
+            android:hint="@string/delivery_address"></com.google.android.material.textfield.TextInputEditText>
+
+        <ImageButton
+            android:id="@+id/search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_search_24" />
+
+
     </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/location_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@id/item_note_input_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/location_input_layout"
+        app:layout_constraintVertical_bias="0.18"
+        tools:listitem="@layout/location_list_item" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_job_info"
