Driver map implementation

--- a/driverapplication/src/main/res/layout/activity_forgot_password.xml
+++ b/driverapplication/src/main/res/layout/activity_forgot_password.xml
@@ -35,7 +35,7 @@
             android:id="@+id/edit_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email" />
+            android:hint="@string/enter_your_email_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
