--- a/driverapplication/src/main/res/menu/activity_main_drawer.xml
+++ b/driverapplication/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,14 @@
 
 
     <group android:checkableBehavior="single">
-
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home"
+            android:title="@string/menu_jobs" />
+        <item
+            android:id="@+id/nav_sign_out"
+            android:icon="@drawable/ic_exit"
+            android:title="@string/menu_sign_out" />
 
     </group>
 </menu>
