--- a/app/src/main/res/layout/activity_jobs.xml
+++ b/app/src/main/res/layout/activity_jobs.xml
@@ -5,14 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.job.JobsActivity">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/job_nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/job_item"/>
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/job_view_navigation" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_job_fab"
         android:layout_width="wrap_content"
@@ -23,4 +26,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:onClick="goToCallToAction"
         android:src="@drawable/ic_baseline_add_circle_24"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
