--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,8 +30,8 @@
         <item name="colorSecondary">@color/reply_orange_500</item>
         <item name="colorSecondaryVariant">@color/reply_orange_400</item>
 
-        <item name="android:colorBackground">@color/reply_blue_50</item>
-        <item name="colorSurface">@color/reply_white_50</item>
+        <item name="android:colorBackground">@color/reply_white_50</item>
+        <item name="colorSurface">@color/reply_blue_50</item>
 
         <item name="colorError">@color/reply_red_400</item>
 
