--- a/driverapplication/src/main/res/menu/activity_main_drawer.xml
+++ b/driverapplication/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,11 @@
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_exit"
             android:title="@string/menu_sign_out" />
+        <item
+            android:id="@+id/nav_work_mode"
+            android:icon="@drawable/ic_exit"
+            android:title="@string/menu_work_mode" />
 
     </group>
+
 </menu>
